--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -1,5 +1,14 @@
+@import url("https://fonts.googleapis.com/css2?family=Genos:wght@100;300;400;500;700&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   text-align: center;
+  font-family: "Genos", sans-serif;
 }
 
 a {
@@ -21,6 +30,30 @@ button:hover {
   background-color: #1e88e5;
 }
 
+.search-container {
+  display: flex;
+  justify-content: center;
+  padding-top: 5rem;
+  padding-bottom: 3.5rem;
+  font-size: 4rem;
+  font-weight: 500;
+}
+
+.search-only {
+  padding-right: 1rem;
+}
+
+#search-bar {
+  font-size: 2rem;
+  text-align: center;
+  border: 2px solid black;
+  width: 32rem;
+  height: 3rem;
+  border-radius: 5%;
+  font-family: "Genos", sans-serif;
+  font-weight: 500;
+}
+
 .grid {
   display: grid;
   grid-template-columns: repeat(3, minmax(250px, 1fr));
@@ -33,6 +66,7 @@ button:hover {
   box-shadow: 2px 3px 10px rgba(0, 0, 0, 0.3);
   display: flex;
   flex-direction: column;
+  flex-wrap: nowrap;
   text-align: center;
   justify-content: space-between;
   background-color: #424242;
