prelimary form styling

--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -7,12 +7,12 @@
 }
 
 body {
-  text-align: center;
+  /* text-align: center; */
   font-family: "Genos", sans-serif;
 }
 
 a {
-  color: white;
+  color: #000000;
   text-decoration: none;
 }
 
@@ -69,7 +69,7 @@ button:hover {
   flex-wrap: nowrap;
   text-align: center;
   justify-content: space-between;
-  background-color: #424242;
+  /* background-color: #424242; */
 }
 
 .card button {
