--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,25 +1,62 @@
 body {
   height: 100vh;
-  /* margin: 0;
-  padding: 0; */
+}
+
+a {
+  color: rgb(70, 56, 201);
+}
+
+a:hover {
+  color: rgb(0, 0, 0);
 }
 
 form {
-}
-
-.form-container {
-  font-size: 2rem;
-  background-color: grey;
-  opacity: 0.7;
-  display: flex;
+  display: grid;
+  grid-template-columns: 200px, 1fr;
   align-items: center;
   justify-content: center;
-  padding-top: 3rem;
 }
 
+label {
+  grid-column: 1/2;
+  margin-right: 1rem;
+}
+
+input,
+button {
+  grid-column: 2/3;
+}
+
+.form-container,
+.input-password,
 .register-here {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.form-container {
+  font-size: 2rem;
+  background-color: rgb(204, 204, 204);
+  opacity: 0.8;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  margin-left: 23rem;
+  margin-right: 23rem;
+}
+
+/* .input-group {
+  display: grid;
+  grid-template-columns: 200px 1fr;
+  align-items: center;
+  justify-content: center;
+} */
+
+.btn-login {
+  grid-column: 2/3;
+  background-color: rgb(133, 219, 133);
+  width: 70%;
+  margin-top: 1rem;
+  margin-left: -3rem;
 }
