--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Genos:wght@100;300;400;500;700&display=swap");
+
 body {
   height: 100vh;
   padding-top: 25%;
@@ -26,6 +28,9 @@ label {
 input {
   height: 2rem;
   width: 15rem;
+  font-family: "Genos", sans-serif;
+  font-size: 1.5rem;
+  text-align: center;
 }
 
 input,
@@ -46,7 +51,7 @@ button {
 .form-container {
   font-size: 2rem;
   background-color: rgb(204, 204, 204);
-  opacity: 0.8;
+  opacity: 0.7;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
   margin-left: 23rem;
