--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -62,12 +62,13 @@ button:hover {
 }
 
 .card {
-  border-radius: 4px;
-  box-shadow: 2px 3px 10px rgba(0, 0, 0, 0.3);
+  border-radius: 5%;
+  box-shadow: 2px 3px 10px rgba(0, 0, 0, 0.711);
   display: flex;
   flex-direction: column;
-  flex-wrap: nowrap;
+  /* flex-wrap: nowrap; */
   text-align: center;
+  align-items: center;
   justify-content: space-between;
   /* background-color: #424242; */
 }
