fixing css parameterized axios calls

--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,16 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Genos:wght@100;300;400;500;700&display=swap");
 
-body {
-  height: 100vh;
-  padding-top: 25%;
-}
-
 a {
   color: rgb(34, 163, 255) !important;
+  text-decoration: none;
 }
 
 a:hover {
-  color: rgb(0, 0, 0);
+  color: rgb(13, 0, 255) !important;
 }
 
 form {
@@ -51,8 +47,8 @@ button {
 
 .form-container {
   font-size: 2rem;
-  background-color: rgb(204, 204, 204);
-  opacity: 0.7;
+  background-color: rgb(249 249, 249);
+  opacity: 0.9;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
   margin-left: 23rem;
@@ -68,7 +64,7 @@ button {
 
 .btn-login {
   grid-column: 2/3;
-  background-color: rgba(119, 223, 2, 0.505);
+  background-color: rgb(0, 0, 0);
   width: 70%;
   margin-top: 0.5rem;
   margin-left: 2.5rem;
