--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -11,23 +11,14 @@ body {
   font-family: "Genos", sans-serif;
 }
 
-a {
-  /* color: #000000; */
-  text-decoration: none;
-}
-
 button {
   padding: 0.5em 1.2em;
   border-radius: 4px;
   border: none;
   cursor: pointer;
-  background-color: #64b5f6;
+  background-color: #000000;
   transition: all 0.2s ease;
   font-weight: 700;
-}
-
-button:hover {
-  background-color: #1e88e5;
 }
 
 .search-container {
@@ -46,7 +37,7 @@ button:hover {
 #search-bar {
   font-size: 2rem;
   text-align: center;
-  border: 2px solid black;
+  border: 2px solid rgb(0, 0, 0);
   width: 32rem;
   height: 3rem;
   border-radius: 5%;
@@ -66,11 +57,9 @@ button:hover {
   box-shadow: 2px 3px 10px rgba(0, 0, 0, 0.711);
   display: flex;
   flex-direction: column;
-  /* flex-wrap: nowrap; */
   text-align: center;
   align-items: center;
   justify-content: space-between;
-  /* background-color: #424242; */
 }
 
 .card button {
