--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -1,16 +1,3 @@
-body {
-  height: 100vh;
-  padding-top: 25%;
-}
-
-/* a {
-  color: rgb(70, 56, 201);
-}
-
-a:hover {
-  color: rgb(0, 0, 0);
-} */
-
 form {
   display: grid;
   grid-template-columns: 200px, 1fr;
@@ -33,7 +20,7 @@ button {
   grid-column: 2/3;
 }
 
-.form-container,
+.search-container,
 .search {
   display: flex;
   flex-direction: column;
@@ -41,7 +28,7 @@ button {
   justify-content: center;
 }
 
-.form-container {
+.search-container {
   font-size: 2rem;
   background-color: rgb(249, 249, 249);
   opacity: 0.7;
