--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -40,9 +40,10 @@ button {
   border: 2px solid rgb(0, 0, 0);
   width: 32rem;
   height: 3rem;
-  border-radius: 5%;
+  border-radius: 30px;
   font-family: "Genos", sans-serif;
   font-weight: 500;
+  margin-top: 1.5rem;
 }
 
 .grid {
@@ -60,6 +61,7 @@ button {
   text-align: center;
   align-items: center;
   justify-content: space-between;
+  margin-top: 2.5rem;
 }
 
 .card button {
