--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Genos:wght@100;300;400;500;700&display=swap");
+
 form {
   display: grid;
   grid-template-columns: 200px, 1fr;
