--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -27,6 +27,11 @@ select {
   direction: ltr;
 }
 
+optgroup {
+  font-family: "Genos", sans-serif;
+  font-size: 2rem;
+}
+
 .search-container,
 .select-mediatype,
 .search {
@@ -53,12 +58,12 @@ select {
   width: 250px;
   border: none;
   border-radius: 30px;
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-family: "Genos", sans-serif;
   box-shadow: 0 5px 25px rgba(0, 0, 0, 0.2);
   appearance: button;
   outline: none;
-  margin-top: -1rem;
+  margin-top: -3rem;
 }
 
 .select-mediatype::before {
